ci: 更新 GitHub Actions 工作流并添加 Dockerfile
- 在 GitHub Actions 工作流中添加 clean 和 prod 参数，以优化构建过程
- 新增 Dockerfile用于构建和部署 Spring Boot 应用

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -26,7 +26,7 @@ jobs:
       - name: 使用 Maven 构建
         run: |
           cd blog
-          mvn -B package --file pom.xml
+          mvn -B clean package -P prod --file pom.xml
 
       - name: 提取项目版本
         id: extract-version
